Fix footer z-index, remove Mobile, update App.js

--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -2,6 +2,8 @@
     justify-content: space-between;
     padding: 2em;
     align-items: center;
+    z-index: -1;
+    position: relative;
 }
 
 .footer_logo {
