--- a/src/css/Overlay.css
+++ b/src/css/Overlay.css
@@ -1,6 +1,6 @@
 #overlay {
     position: fixed;
-    z-index: 3;
+    z-index: 4;
     width: 70vw;
     height: 85vh;
     top: 0;
@@ -26,7 +26,7 @@
     background: linear-gradient(90deg, rgba(66,61,152,1) 0%, rgba(121,53,131,1) 25%, rgba(60,60,150,1) 57%, rgba(7,153,182,1) 100%);
     width: 72vw;
     height: 89vh;
-    z-index: 2;
+    z-index: 3;
     display: block;
     border-radius: 1rem;
 }
@@ -40,7 +40,7 @@
     position: fixed;
     top: 0;
     display: block;
-    z-index: 1;
+    z-index: 2;
 }
 
 /* =================== OVERLAY CONTENT ====================== */
@@ -54,7 +54,7 @@
     border-radius: 1rem;
     height: 256px;
     border: 3px black solid;
-
+    
     /* For trasparent images */
     background-color: rgb(255, 255, 255);
 } #overlay_hr {
